# eose-api

./: .gitignore  LICENSE  README.md  pyproject.toml  tatc-orbit-example.ipynb
.github/workflows/: sphinx-docs-pages  sphinx-docs-pages.yml
docs/: conf.py  eose-api.drawio  index.rst
docs/api/: index.rst  utils.rst
docs/api/analysis/: access.rst  coverage.rst  datametrics.rst  index.rst  pointing.rst  propagation.rst
docs/api/objects/: geometry.rst  grids.rst  index.rst  instruments.rst  orbits.rst  satellites.rst  targets.rst
docs/examples/: index.rst  orbitpy-propagation-example.ipynb  orbitpy-tatc-coverage-example.ipynb  point-example.ipynb  tatc-coverage-example.ipynb  tatc-instrupy-instrument-example.ipynb  tatc-instrupy-optical-sensor-example.ipynb  tatc-propagation-example.ipynb
src/: example.ipynb  instrument-example.ipynb  orbitpy-propagation-example.ipynb  orbitpy-tatc-coverage-example.ipynb  point-example.ipynb  tatc-coverage-example.ipynb  tatc-instrupy-instrument-example.ipynb  tatc-instrupy-optical-sensor-example.ipynb  tatc-propagation-example.ipynb
src/eose/: __init__.py  access.py  base.py  coverage.py  datametric.py  datametrics.py  geometry.py  grids.py  instrument-example.ipynb  instrument.py  instruments.py  observation.py  orbits.py  pointing.py  propagation.py  satellites.py  targets.py  utils.py
src/eose/tatc/: instrument.py  orbit.py  satellite.py
