[build-system]
requires = [
    "setuptools >= 57.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "eose-api"
description = "Earth Observing Systems Engineering APIs"
authors = [
    {"name" = "Paul T. Grogan", "email" = "paul.grogan@asu.edu"}
]
readme = "README.md"
requires-python = ">=3.8, <3.11"
license = {text = "BSD License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning"
]
dependencies = [
    "pydantic >= 2.6"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "black[jupyter] >= 24.2",
    "pylint",
    "pylint-pydantic"
]

[tool.setuptools.dynamic]
version = {attr = "tatc.__version__"}