[build-system]
requires = [
    "setuptools >= 57.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "eose-api"
description = "Earth Observing Systems Engineering APIs"
authors = [
    {"name" = "Paul T. Grogan", "email" = "paul.grogan@asu.edu"}
]
readme = "README.md"
requires-python = ">=3.8, <3.11"
license = {text = "BSD License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning"
]
dependencies = [
    "geojson-pydantic",
    "geopandas >= 0.14",
    "pydantic >= 2.6",
    "shapely >= 2",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "black[jupyter] >= 24.2",
    "pylint",
    "pylint-pydantic",
]
examples = [
    "matplotlib",
]

[tool.setuptools.dynamic]
version = {attr = "tatc.__version__"}